--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
+:root {
+  --main-raius: 7px;
+  --color1: #dedcdc;
+  --color2: #0099ff;
+  --color3: #fdf8f8;
+  --m-block: 1rem 0;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+  text-transform: capitalize;
 }
 body {
   margin: 0;
@@ -10,9 +20,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(55, 48, 107);
+  background: linear-gradient(112deg, #4e1f53 0%, #272f50 100%);
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+#root {
+  outline: 1px solid red;
+  position: absolute;
+  width: 100%;
+  height: 100svh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
