--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,11 @@ body {
   transition: all0.5s ease-in-out;
 }
 
+.button-and-icon[disabled] {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 .submitBtn {
   color: var(--dark-blue);
   background-color: transparent;
