--- a/src/components/Dictionary.css
+++ b/src/components/Dictionary.css
@@ -75,16 +75,19 @@
   font-size: 0.9em;
 }
 
-.button-and-icon:hover .search-icon {
+.button-and-icon:hover .search-icon,
+.button-and-icon:focus-within .search-icon {
   opacity: 1;
 }
 
-.button-and-icon:hover .submitBtn {
+.button-and-icon:hover .submitBtn,
+.button-and-icon:focus-within .submitBtn {
   transform: translateX(-9px);
   color: var(--color1);
 }
 
-.button-and-icon:hover {
+.button-and-icon:hover,
+.button-and-icon:focus-within {
   background-color: var(--dark-blue);
 }
 
