--- a/src/components/Meanings.css
+++ b/src/components/Meanings.css
@@ -1,11 +1,20 @@
 /* meanings-container is parent of tab-container */
-.meanings-container {
+.tab-button {
   display: flex;
   gap: 0.5rem;
   color: var(--color2);
   cursor: pointer;
   margin: var(--m-block);
   justify-content: start;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  padding: 0.25rem 0.4rem;
+  border-radius: 0.7rem;
+}
+
+.tab-button:focus {
+  outline: 1px solid var(--color2);
 }
 
 .tab-item {
