refactor Meanings component by separating button and tab content

--- a/src/components/Meanings.css
+++ b/src/components/Meanings.css
@@ -1,4 +1,15 @@
 /* meanings-container is parent of tab-container */
+.meanings-container {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  /* outline: 1px solid red; */
+}
+
 .tab-button {
   display: flex;
   gap: 0.5rem;
