--- a/src/components/Audio.css
+++ b/src/components/Audio.css
@@ -1,6 +1,6 @@
 .play-audio {
   color: #d9d9d9;
-  /* accent-color: red; */
+  margin-left: 0.5rem;
   font-size: 1.6rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
