--- a/src/components/Meanings.css
+++ b/src/components/Meanings.css
@@ -16,7 +16,7 @@
   gap: 0.5rem;
   color: var(--color2);
   cursor: pointer;
-  justify-content: start;
+  justify-content: flex-start;
   background-color: transparent;
   outline: none;
   border: none;
